--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 400;
 }
 
@@ -151,16 +151,21 @@ button:active {
   margin-bottom: 2rem;
 }
 
+.artwork {
+  height: 300px;
+  width: 300px;
+}
+
 .artwork-container {
   max-height: 400px;
   max-width: 400px;
 }
 
-.artwork-container img {
+.artwork-container a img {
   transition: 0.3s ease;
 }
 
-.artwork-container:hover img {
+.artwork-container:hover a img {
   opacity: 0.7;
   cursor: pointer;
 }
