--- a/main.css
+++ b/main.css
@@ -132,7 +132,7 @@ button:active {
 }
 
 .info-box {
-  background-color: rgba(255, 255, 255, 0.1);
+  /* background-color: rgba(255, 255, 255, 0.1); */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -142,13 +142,19 @@ button:active {
   height: 100vh;
 }
 
-.info-container {
-  background-color: rgba(255, 255, 255, 0.1);
+.get-id-container {
+  /* background-color: rgba(255, 255, 255, 0.1); */
   text-align: left;
   padding: 2rem;
   border-radius: 0.3rem;
   width: 20rem;
   margin-bottom: 2rem;
+}
+
+.buffer-animation {
+  height: 100px;
+  width: 100px;
+  animation: spin 1s linear infinite;
 }
 
 .artwork {
