--- a/main.css
+++ b/main.css
@@ -54,9 +54,9 @@ h3 {
 }
 
 h4 {
-  font-size: 2.5rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  opacity: 0.5
 }
 
 h5 {
