--- a/main.css
+++ b/main.css
@@ -155,7 +155,7 @@ button:active {
   /* margin-bottom: 2rem; */
 }
 
-@keyframes spin {
+/* @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
@@ -165,7 +165,7 @@ button:active {
   width: 100px;
   animation: spin 1s linear infinite;
   margin-bottom: 1rem;
-}
+} */
 
 .artwork {
   height: 300px;
