--- a/main.css
+++ b/main.css
@@ -158,14 +158,14 @@ button:active {
 /* @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
+} */
 
 .buffer-animation {
   height: 100px;
   width: 100px;
-  animation: spin 1s linear infinite;
+  /* animation: spin 1s linear infinite; */
   margin-bottom: 1rem;
-} */
+}
 
 .artwork {
   height: 300px;
