New style version

--- a/main1.css
+++ b/main1.css
@@ -155,15 +155,15 @@ button:active {
   /* margin-bottom: 2rem; */
 }
 
-/* @keyframes spin {
+@keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-} */
+}
 
 .buffer-animation {
   height: 100px;
   width: 100px;
-  /* animation: spin 1s linear infinite; */
+  animation: spin 1s linear infinite;
   margin-bottom: 1rem;
 }
 
