--- a/songs_styles.css
+++ b/songs_styles.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-family: monospace, sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-optical-sizing: auto;
   font-style: normal;
   font-size: 0.8vw;
