--- a/songs_styles1.css
+++ b/songs_styles1.css
@@ -9,14 +9,14 @@
 
 html {
   background-color: black;
+  background-color: blue;
 }
 
 body {
   font-family: "IBM Plex Mono", monospace;
   font-optical-sizing: auto;
   font-style: normal;
-  /* font-size: 0.8dvw; */
-  font-size: clamp(1px, 0.8vw, 16px); 
+  font-size: 0.8dvw;
   font-weight: 400;
   color: white;
   overflow-x: hidden;
