--- a/main1.css
+++ b/main1.css
@@ -112,27 +112,14 @@ button:active {
 .artwork {
   height: 300px;
   width: 300px;
-}
-
-.artwork-container {
-  max-height: 400px;
-  max-width: 400px;
-}
-
-.artwork-container a img {
-  transition: 0.3s ease;
-}
-
-.artwork-container:hover a img {
-  opacity: 0.7;
-  cursor: pointer;
+  object-fit: cover;
 }
 
 .song-info {
   display: flex;
-  flex-direction: column; /* Stack items vertically */
-  gap: 20px; /* Add space between items */
-  align-items: center; /* Center items horizontally (optional) */
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
 }
 
 .view-songlist {
