Send multiple recordings

--- a/main1.css
+++ b/main1.css
@@ -9,7 +9,8 @@
 }
 
 html {
-  background-color: rgb(255, 82, 128);
+  /* background-color: rgb(255, 82, 128); */
+  background-color: black;
   height: 100%;
   overflow: hidden;
 }
